Added card carousel

--- a/src/app/app-root/app.component.html
+++ b/src/app/app-root/app.component.html
@@ -1,4 +1,7 @@
 <div>
   <app-header />
-  <app-bubbles-category />
+  <div class="page-container">
+    <app-landing-page /> <!-- This will be replaced with something dynamic!!-->
+  </div>
+  <!--app-footer-->
 </div>
