--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Rubik');
+
+body {
+    font-family: 'Rubik', sans-serif;
+}
+
+* {
+    margin: 0px;
+}
