Added signin/signup pages and connected to backend

--- a/src/app/app-root/app.component.html
+++ b/src/app/app-root/app.component.html
@@ -1,7 +1,7 @@
 <div>
-  <app-header />
-  <div class="page-container">
-    <app-landing-page /> <!-- This will be replaced with something dynamic!!-->
+  <app-header *ngIf="!isAuthPage()" />
+  <div>
+    <router-outlet /> <!-- This will be replaced with something dynamic!!-->
   </div>
   <!--app-footer-->
 </div>
