--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,14 +1,35 @@
 <div class="lp-main-container">
     <div class="categories">
-        <img src="\bubbles-category\leading-category-yad1.webp" height="100" alt="Gal2 Logo" />
-        <img src="\bubbles-category\leading-category-real-estate.webp" height="100" alt="Gal2 Logo" />
-        <img src="\bubbles-category\leading-category-vehicles.webp" height="100" alt="Gal2 Logo" />
-        <img src="\bubbles-category\leading-category-second-hand.webp" height="100" alt="Gal2 Logo" />
-        <img src="\bubbles-category\leading-category-drushim-new.webp" height="100" alt="Gal2 Logo" />
-        <img src="\bubbles-category\leading-category-professional.webp" height="100" alt="Gal2 Logo" />
-        <img src="\bubbles-category\leading-category-business.webp" height="100" alt="Gal2 Logo" />
+        <div>
+            <img src="\bubbles-category\leading-category-yad1.webp" alt="Gal2 Logo" />
+            <p>דירות חדשות</p>
+        </div>
+        <div>
+            <img src="\bubbles-category\leading-category-real-estate.webp" alt="Gal2 Logo" />
+            <p>נדל״ן</p>
+        </div>
+        <div>
+            <img src="\bubbles-category\leading-category-vehicles.webp" alt="Gal2 Logo" />
+            <p>רכב</p>
+        </div>
+        <div>
+            <img src="\bubbles-category\leading-category-second-hand.webp" alt="Gal2 Logo" />
+            <p>יד שנייה</p>
+        </div>
+        <div>
+            <img src="\bubbles-category\leading-category-drushim-new.webp" alt="Gal2 Logo" />
+            <p>דרושים</p>
+        </div>
+        <div>
+            <img src="\bubbles-category\leading-category-professional.webp" alt="Gal2 Logo" />
+            <p>בעלי מקצוע</p>
+        </div>
+        <div>
+            <img src="\bubbles-category\leading-category-business.webp" alt="Gal2 Logo" />
+            <p>עסקים למכירה</p>
+        </div>
     </div>
-    <div class="try">
+    <div>
         <p-carousel [value]="products" [numVisible]="4" [numScroll]="2" [circular]="true">
             <ng-template pTemplate="item" let-product>
                 <app-card [item]="product" />
