--- a/src/app/cmps/card/card.component.scss
+++ b/src/app/cmps/card/card.component.scss
@@ -1,6 +1,9 @@
 .item-info {
     direction: rtl;
     padding: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 
 }
 
@@ -17,7 +20,18 @@
         /* subtle small shadow */
         0px 1px 2px rgba(0, 0, 0, 0.1);
     /* slightly larger softer shadow */
-    width: max-content;
     margin-bottom: 2px;
+    margin-right: 14px;
     border-radius: 8px;
+}
+
+.house-price {
+    font-weight: bold;
+    opacity: 0.87;
+}
+
+.house-address,
+.house-rooms {
+    font-size: 15px;
+    opacity: 0.7;
 }
