* Added index-page for 'פרסום הודעה'

--- a/src/app/cmps/app-header/app-header.component.html
+++ b/src/app/cmps/app-header/app-header.component.html
@@ -1,7 +1,7 @@
 <div class="header-main">
     <div class="header-main-container">
         <a routerLink="/">
-            <img src="/gal2-logo.png" height="40" alt="Gal2 Logo" />
+            <img src="/gal2-logo.png" height="40px" alt="Gal2 Logo" />
         </a>
         <div class="header-options">
             <span>נדל״ן</span>
@@ -56,7 +56,8 @@
                 aria-hidden="true" focusable="false">
                 <path d="M8 1v14M1 8h14" stroke="#F60" stroke-width="2" stroke-linecap="round" />
             </svg>
-            <span>פרסום מודעה</span>
+            <a routerLink="/publish" style="all: unset"> <span>פרסום מודעה</span></a>
+
         </button>
 
     </div>
