--- a/src/app/cmps/details/details.component.html
+++ b/src/app/cmps/details/details.component.html
@@ -22,7 +22,7 @@
         </div>
         <div class="details-right-info">
             <div class="title">{{house.street}} {{house.number}}</div>
-            <div class="address">{{house.city}}</div>
+            <div class="address">{{house.type}}, {{house.city}}</div>
             <div class="meta">
                 <span>{{house.rooms}} חדרים</span>
                 <span>קומה 1/1</span>
