--- a/src/app/cmps/publish-cmps/index-page/index-page.component.html
+++ b/src/app/cmps/publish-cmps/index-page/index-page.component.html
@@ -1,15 +1,17 @@
 <div class="index-main">
     <span>אני רוצה לפרסם מודעה בלוח...</span>
     <div class="cards-container">
-        <div class="category-card">
-            <div class="category-icon">
-                <img src="nadlan.svg" alt="נדל״ן" class="icon-default" />
-                <img src="nadlan_active.svg" alt="נדל״ן" class="icon-active" />
+        <a routerLink="/publish/nadlan" style="all: unset">
+            <div class="category-card">
+                <div class="category-icon">
+                    <img src="nadlan.svg" alt="נדל״ן" class="icon-default" />
+                    <img src="nadlan_active.svg" alt="נדל״ן" class="icon-active" />
+                </div>
+                <h3 class="category-title">נדל"ן</h3>
+                <p class="category-subtitle">מכירה, השכרה, מסחרי</p>
+                <button class="category-button">מתחילים</button>
             </div>
-            <h3 class="category-title">נדל"ן</h3>
-            <p class="category-subtitle">מכירה, השכרה, מסחרי</p>
-            <button class="category-button">מתחילים</button>
-        </div>
+        </a>
         <div class="category-card">
             <div class="category-icon">
                 <img src="vehicle.svg" alt="רכב" class="icon-default" />
