--- a/src/app/cmps/app-header/app-header.component.html
+++ b/src/app/cmps/app-header/app-header.component.html
@@ -51,14 +51,15 @@
             <button class="mat-menu-item" mat-menu-item (click)="onLogin()">התחבר</button>
         </mat-menu>
 
-        <button class="btn-ad">
-            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 16 16" fill="none"
-                aria-hidden="true" focusable="false">
-                <path d="M8 1v14M1 8h14" stroke="#F60" stroke-width="2" stroke-linecap="round" />
-            </svg>
-            <a routerLink="/publish" style="all: unset"> <span>פרסום מודעה</span></a>
+        <a routerLink="/publish" style="all: unset">
+            <button class="btn-ad">
+                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 16 16" fill="none"
+                    aria-hidden="true" focusable="false">
+                    <path d="M8 1v14M1 8h14" stroke="#F60" stroke-width="2" stroke-linecap="round" />
+                </svg>
+                <span>פרסום מודעה</span>
 
-        </button>
+            </button></a>
 
     </div>
 </div>
