--- a/src/app/cmps/publish-cmps/nadlan-form/nadlan-form.component.scss
+++ b/src/app/cmps/publish-cmps/nadlan-form/nadlan-form.component.scss
@@ -3,8 +3,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 12px;
     padding-top: 50px;
+    padding-bottom: 12px;
 }
 
 .nadlan-form-step {
@@ -14,11 +15,11 @@
     height: 60px;
     border-radius: 10px;
     align-content: center;
-    border: 1px solid rgba(112, 112, 112);
+    border: 1px solid rgba(112, 112, 112, 0.2);
     box-sizing: border-box;
     direction: rtl;
     padding: 10px 15px;
-    opacity: 0.365;
+
 
     &.active {
         opacity: 0.85;
@@ -30,10 +31,12 @@
         .step-number {
             color: #0fca80;
             border: 2px solid #0fca80;
+            opacity: 1;
         }
 
         .step-title {
             font-size: 24px;
+            opacity: 1;
         }
     }
 }
@@ -45,11 +48,15 @@
     border: 2px solid gray;
     border-radius: 100%;
     padding: 4px 9px 4px 9px;
+    opacity: 0.365;
 }
 
 .step-title {
     margin-right: 8px;
     font-size: 20px;
+    align-items: center;
+    opacity: 0.365;
+
 }
 
 .address-form {
@@ -246,4 +253,26 @@ textarea {
     font-size: 15px;
 
 
+}
+
+.success-icon {
+    width: 32px;
+    height: 32px;
+    background-color: rgba(129, 251, 206, 0.25);
+    border-radius: 50%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
+    svg {
+        width: 25px;
+        height: 25px;
+
+    }
+}
+
+.title-container {
+    display: flex;
+    align-items: center;
+    gap: 2px
 }
