--- a/src/app/cmps/publish-cmps/index-page/index-page.component.html
+++ b/src/app/cmps/publish-cmps/index-page/index-page.component.html
@@ -12,16 +12,18 @@
                 <button class="category-button">מתחילים</button>
             </div>
         </a>
-        <div class="category-card">
-            <div class="category-icon">
-                <img src="vehicle.svg" alt="רכב" class="icon-default" />
-                <img src="vehicle_active.svg" alt="רכב" class="icon-active" />
+        <a routerLink="/publish/vehicle" style="all: unset">
+            <div class="category-card">
+                <div class="category-icon">
+                    <img src="vehicle.svg" alt="רכב" class="icon-default" />
+                    <img src="vehicle_active.svg" alt="רכב" class="icon-active" />
+                </div>
+                <h3 class="category-title">כלי רכב</h3>
+                <p class="category-subtitle">כלי רכב, דו גלגלי, כלי שיט, מיוחדים
+                </p>
+                <button class="category-button">מתחילים</button>
             </div>
-            <h3 class="category-title">כלי רכב</h3>
-            <p class="category-subtitle">כלי רכב, דו גלגלי, כלי שיט, מיוחדים
-            </p>
-            <button class="category-button">מתחילים</button>
-        </div>
+        </a>
         <div class="category-card special-card">
             <div class="category-icon">
                 <img src="second_hand.svg" alt="יד שנייה" class="icon-default" />
