--- a/src/app/cmps/card/card.component.scss
+++ b/src/app/cmps/card/card.component.scss
@@ -25,13 +25,13 @@
     border-radius: 8px;
 }
 
-.house-price {
+.info1 {
     font-weight: bold;
     opacity: 0.87;
 }
 
-.house-address,
-.house-rooms {
+.info2,
+.info3 {
     font-size: 15px;
     opacity: 0.7;
 }
