* Added yad2 item form * Added details page for vehicles * Added fake ads to landing page * Added * Added footer

--- a/src/app/cmps/publish-cmps/index-page/index-page.component.html
+++ b/src/app/cmps/publish-cmps/index-page/index-page.component.html
@@ -24,15 +24,17 @@
                 <button class="category-button">מתחילים</button>
             </div>
         </a>
-        <div class="category-card special-card">
-            <div class="category-icon">
-                <img src="second_hand.svg" alt="יד שנייה" class="icon-default" />
-                <img src="second_hand_active.svg" alt="יד שנייה" class="icon-active" />
+        <a routerLink="/publish/yad2" style="all: unset">
+            <div class="category-card special-card">
+                <div class="category-icon">
+                    <img src="second_hand.svg" alt="יד שנייה" class="icon-default" />
+                    <img src="second_hand_active.svg" alt="יד שנייה" class="icon-active" />
+                </div>
+                <h3 class="category-title">יד שניה</h3>
+                <p class="category-subtitle">לבית לגינה ולמשרד, חשמל, ספורט<br> פנאי ושונות</p>
+                <button class="category-button">מתחילים</button>
             </div>
-            <h3 class="category-title">יד שניה</h3>
-            <p class="category-subtitle">לבית לגינה ולמשרד, חשמל, ספורט<br> פנאי ושונות</p>
-            <button class="category-button">מתחילים</button>
-        </div>
+        </a>
     </div>
 
 </div>
