--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,4 +1,8 @@
 <div class="lp-main-container">
+
+    <img style="border-radius: 10px; margin-top: 35px;cursor: pointer;" src="/landing-ad.webp" alt="Gal2 Logo"
+        (click)="bannerClick()" />
+
     <div class="categories">
         <div>
             <img src="\bubbles-category\leading-category-yad1.webp" alt="Gal2 Logo" />
