--- a/src/app/app-root/app.component.html
+++ b/src/app/app-root/app.component.html
@@ -3,5 +3,5 @@
   <div>
     <router-outlet /> <!-- This will be replaced with something dynamic!!-->
   </div>
-  <!--app-footer-->
+  <app-footer />
 </div>
