--- a/src/app/cmps/app-header/app-header.component.scss
+++ b/src/app/cmps/app-header/app-header.component.scss
@@ -7,6 +7,7 @@
     overflow: visible;
     direction: rtl;
     white-space: nowrap;
+    //   width: fit-content;
 }
 
 
@@ -43,14 +44,14 @@
 
     .header-userbubble-loggedin {
         display: flex;
-        height: 35px;
-        width: 35px;
+        height: 40px;
+        width: 40px;
         justify-content: center;
         border: 1px solid #F60;
         color: #F60;
         //  padding: 10.5px 17px;
         border-radius: 100%;
-        background: rgba(255, 102, 0, 0.05);
+        background: rgba(255, 102, 0, 0.1);
 
         &:hover {
             box-shadow: 0 2px 15px rgba(255, 102, 0, 0.25);
