--- a/src/app/cmps/details/details.component.html
+++ b/src/app/cmps/details/details.component.html
@@ -1,36 +1,54 @@
-<div *ngIf="type === 'house'" class="details-container">
+<div *ngIf="isHouse(item)" class="details-container">
     <div class="details-images">
         <div class="thumbnails">
-            <img [src]="house.images[2] || 'https://nftcalendar.io/storage/uploads/2022/02/21/image-not-found_0221202211372462137974b6c1a.png'"
+            <img [src]="item.images[2] || 'https://nftcalendar.io/storage/uploads/2022/02/21/image-not-found_0221202211372462137974b6c1a.png'"
                 alt="House image">
-            <img [src]="house.images[1] || 'https://nftcalendar.io/storage/uploads/2022/02/21/image-not-found_0221202211372462137974b6c1a.png'"
+            <img [src]="item.images[1] || 'https://nftcalendar.io/storage/uploads/2022/02/21/image-not-found_0221202211372462137974b6c1a.png'"
                 alt="House image">
         </div>
         <div class="main-media">
-            <img src={{house.images[0]}} alt="Random image">
+            <img src={{item.images[0]}} alt="Random image">
         </div>
     </div>
 
     <div class="details-bottom-container">
         <div class="details-left-price">
-            <span class="price">₪ {{house.price|number}}</span>
+            <span class="price">₪ {{item.price|number}}</span>
             <hr class="divider">
             <div class="cta">
                 <button *ngIf="!showPhoneNumber" class="btn-primary" (click)="showPhoneNumber = true">הצגת מספר
                     טלפון</button>
-                <div class="phoneNumber" *ngIf="showPhoneNumber">{{formatTenDigits(house.phoneNumber)}}</div>
+                <div class="phoneNumber" *ngIf="showPhoneNumber">{{formatTenDigits(item.phoneNumber)}}</div>
                 <button class="btn-secondary">שליחת הודעה</button>
             </div>
         </div>
         <div class="details-right-info">
-            <div class="title">{{house.street}} {{house.number}}</div>
-            <div class="address">{{house.type}}, {{house.city}}</div>
+            <div class="title">{{item.street}} {{item.number}}</div>
+            <div class="address">{{item.type}}, {{item.city}}</div>
             <div class="meta">
-                <span>{{house.rooms}} חדרים</span>
-                <span>קומה {{house.floor}}/{{house.totalFloors}}</span>
-                <span>{{house.size}} מ"ר</span>
+                <span><svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M4 20.67a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H4.75a.75.75 0 01-.75-.75z"
+                            fill="currentColor"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M6.975 20.107V5.362c0-.698.56-1.264 1.25-1.264l7.55.007c.69 0 1.25.566 1.25 1.264v14.745h1.5V5.369c0-1.536-1.231-2.781-2.75-2.781l-7.55-.007c-1.52 0-2.75 1.245-2.75 2.78v14.746h1.5z"
+                            fill="currentColor"></path>
+                        <path d="M15.75 13.448a1.184 1.184 0 11-2.367 0 1.184 1.184 0 012.367 0z" fill="currentColor">
+                        </path>
+                    </svg>{{item.rooms}} חדרים</span>
+                <span><svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M4.547 20.423h14.846a1 1 0 001-.987l.047-3.578a1 1 0 00-1-1.014h-3.635a1 1 0 01-1-1v-3.597a1 1 0 00-1-1h-3.608a1 1 0 01-1-1v-3.67a1 1 0 00-1-1h-3.65a1 1 0 00-1 1v14.846a1 1 0 001 1z"
+                            stroke="currentColor" stroke-width="1.5"></path>
+                    </svg>קומה {{item.floor}}/{{item.totalFloors}}</span>
+                <span><svg width="1em" height="1em" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M5 21.5h13a3 3 0 003-3v-13a3 3 0 00-3-3H5a3 3 0 00-3 3v13a3 3 0 003 3zM5 20a1.5 1.5 0 01-1.5-1.5v-13A1.5 1.5 0 015 4h13a1.5 1.5 0 011.5 1.5v13A1.5 1.5 0 0118 20H5z"
+                            fill="currentColor"></path>
+                        <path d="M3.5 10h17v1.5h-17V10z" fill="currentColor"></path>
+                        <path d="M8.5 21V11H10v10H8.5zM13.5 11V4H15v7h-1.5z" fill="currentColor"></path>
+                    </svg>{{item.size}} מ"ר</span>
             </div>
-            <div class="description">{{house.description}}</div>
+            <div class="description">{{item.description}}</div>
             <hr class="divider">
             <span class="more-details">פרטים נוספים</span>
             <div class="listing-meta">
@@ -42,9 +60,97 @@
 
 
                 <div class="meta-label">מחיר למ"ר</div>
-                <div class="meta-value">{{ (house.price/house.size) | number:'1.0-0' }} ₪</div>
+                <div class="meta-value">{{ (item.price/item.size) | number:'1.0-0' }} ₪</div>
                 <div class="meta-label">תאריך כניסה</div>
                 <div class="meta-value">מידית</div>
+
+            </div>
+
+
+        </div>
+    </div>
+</div>
+
+<div *ngIf="isVehicle(item)" class="details-container">
+    <div class="details-images">
+        <div class="thumbnails">
+            <img [src]="item.images[2] || 'https://nftcalendar.io/storage/uploads/2022/02/21/image-not-found_0221202211372462137974b6c1a.png'"
+                alt="House image">
+            <img [src]="item.images[1] || 'https://nftcalendar.io/storage/uploads/2022/02/21/image-not-found_0221202211372462137974b6c1a.png'"
+                alt="House image">
+        </div>
+        <div class="main-media">
+            <img src={{item.images[0]}} alt="Random image">
+        </div>
+    </div>
+
+    <div class="details-bottom-container">
+        <div class="details-left-price">
+            <span class="price">₪ {{item.price|number}}</span>
+            <hr class="divider">
+            <div class="cta">
+                <button *ngIf="!showPhoneNumber" class="btn-primary" (click)="showPhoneNumber = true">הצגת מספר
+                    טלפון</button>
+                <div class="phoneNumber" *ngIf="showPhoneNumber">{{formatTenDigits(item.ownerPhone)}}</div>
+                <button class="btn-secondary">שליחת הודעה</button>
+            </div>
+        </div>
+        <div class="details-right-info">
+            <div class="title">{{item.manufacturer}} {{item.degem}}</div>
+            <div class="address">{{item.gearbox}} ({{item.horsepower}} כ"ס)</div>
+            <div class="meta">
+
+                <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" fill="currentColor"
+                            d="M11.25 8a.75.75 0 0 0 1.5 0v-.8h2.5V8a.75.75 0 0 0 1.5 0v-.8H19l.09.008a.5.5 0 0 1 .41.492v2.75h-15V7.7l.008-.09A.5.5 0 0 1 5 7.2h2.25V8a.75.75 0 0 0 1.5 0v-.8h2.5V8Zm-2.5-2.3h2.5V4a.75.75 0 0 1 1.5 0v1.7h2.5V4a.75.75 0 0 1 1.5 0v1.7H19a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-11a2 2 0 0 1 2-2h2.25V4a.75.75 0 0 1 1.5 0v1.7Zm-4.25 13v-6.75h15v6.75l-.008.09a.5.5 0 0 1-.492.41H5l-.09-.008a.5.5 0 0 1-.41-.492Z">
+                        </path>
+                    </svg> {{item.year}}</span>
+                <span><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M13.146 22c-1.737 0-3.378-.782-4.51-2.14l-4.87-4.673a2.548 2.548 0 01-.211-3.407 2.333 2.333 0 011.816-.881c.51 0 .992.162 1.395.476l.44.333v-5.6c0-1.178.938-2.14 2.088-2.14.272 0 .535.054.78.153.01-1.168.949-2.121 2.09-2.121.816 0 1.553.485 1.895 1.231.298-.161.632-.251.983-.251 1.15 0 2.088.962 2.088 2.14v.96c.246-.098.518-.152.781-.152 1.15 0 2.089.962 2.089 2.14v7.856c0 3.343-2.659 6.067-5.924 6.067h-.956l.026.009zm-7.775-9.762a1.04 1.04 0 00-.807.396 1.175 1.175 0 00.096 1.573l4.8 4.62.088.08c.913 1.125 2.203 1.745 3.59 1.745h.956c2.545 0 4.616-2.122 4.616-4.728V8.067c0-.44-.351-.8-.781-.8-.43 0-.781.36-.781.8v3.128c-.088.78-1.22.78-1.308 0V5.128c0-.44-.35-.8-.78-.8-.43 0-.782.36-.782.8v6.067c-.087.78-1.22.78-1.307 0V4.14c0-.44-.351-.8-.781-.8-.43 0-.781.36-.781.8v7.056c-.088.78-1.22.78-1.308 0V6.108c0-.44-.35-.8-.78-.8-.43 0-.782.36-.782.8v8.252l-2.527-1.915a1.049 1.049 0 00-.623-.216l-.018.01z"
+                            fill="currentColor"></path>
+                    </svg>יד {{item.yad}}</span>
+                <span><svg viewBox="0 0 20 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M10.226 15.868c.385.385.943.564 1.672.539.73-.025 1.263-.296 1.598-.814l4.503-7.01c.117-.184.104-.347-.038-.49-.143-.141-.306-.154-.49-.037l-6.969 4.532c-.503.334-.771.868-.805 1.603-.033.734.143 1.294.529 1.677zM4.817 20c-.285 0-.566-.07-.842-.213a1.367 1.367 0 01-.617-.613 11.915 11.915 0 01-1.006-2.442A9.624 9.624 0 012 14.091c0-1.386.264-2.692.792-3.919a10.225 10.225 0 012.151-3.205 10.272 10.272 0 013.182-2.166A9.555 9.555 0 0112.012 4c.754 0 1.543.096 2.364.288a9.337 9.337 0 012.44.964c.336.184.52.405.554.663a.67.67 0 01-.252.639 1 1 0 01-.465.188.765.765 0 01-.49-.088 9.4 9.4 0 00-2.19-.864c-.754-.192-1.408-.288-1.961-.288-2.348 0-4.352.835-6.012 2.504-1.66 1.67-2.49 3.698-2.49 6.085 0 .75.104 1.51.314 2.278.21.768.507 1.478.893 2.129h14.565c.369-.601.662-1.302.88-2.104a8.939 8.939 0 00.327-2.353c0-.618-.08-1.277-.239-1.978a6.685 6.685 0 00-.818-2.004.71.71 0 01-.1-.513.753.753 0 01.251-.438.708.708 0 01.604-.163.72.72 0 01.503.363c.42.768.738 1.532.956 2.291.218.76.335 1.524.352 2.291a10.656 10.656 0 01-.314 2.83 9.088 9.088 0 01-1.019 2.454c-.201.384-.415.617-.641.7a2.455 2.455 0 01-.843.126H4.817z"
+                            fill="currentColor"></path>
+                    </svg>{{addCommas(item.kilometraj.toLocaleString())}} ק"מ</span>
+            </div>
+            <div class="vehicle-location">
+                <svg class="" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M9.25 9a2.75 2.75 0 115.5 0 2.75 2.75 0 01-5.5 0zM12 7.75a1.25 1.25 0 100 2.5 1.25 1.25 0 000-2.5z"
+                        fill="currentColor"></path>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M12 20.25c-.485.572-.485.572-.486.571l-.001-.001-.005-.004-.016-.014a10.867 10.867 0 01-.266-.237 26.393 26.393 0 01-2.944-3.202C6.692 15.309 5 12.43 5 9.403c0-1.834.74-3.591 2.054-4.885A7.05 7.05 0 0112 2.5a7.05 7.05 0 014.946 2.018 6.856 6.856 0 012.055 4.886c0 3.026-1.693 5.905-3.282 7.959a26.404 26.404 0 01-2.944 3.202 14.758 14.758 0 01-.267.237l-.015.014-.005.004-.001.001L12 20.25zM12 4a5.55 5.55 0 00-3.893 1.587A5.356 5.356 0 006.5 9.404c0 2.512 1.433 5.056 2.968 7.04A24.884 24.884 0 0012 19.238a24.887 24.887 0 002.532-2.792c1.536-1.985 2.969-4.529 2.969-7.041 0-1.43-.577-2.803-1.607-3.817A5.55 5.55 0 0012 4z"
+                        fill="currentColor"></path>
+                    <path d="M12 20.25l.486.572a.75.75 0 01-.972 0L12 20.25z" fill="currentColor"></path>
+                </svg>
+                {{item.location}}
+            </div>
+            <div class="description">{{item.description}}</div>
+            <hr class="divider">
+            <span class="more-details">פרטים נוספים</span>
+            <div class="listing-meta">
+                <div class="meta-label">צבע</div>
+                <div class="meta-value">{{item.color}}</div>
+                <div class="meta-label">קילומטראז' </div>
+                <div class="meta-value">{{addCommas(item.kilometraj.toLocaleString())}}</div>
+
+
+                <div class="meta-label">בעלות נוכחית</div>
+                <div class="meta-value">{{item.baalut}}</div>
+                <div class="meta-label">תיבת הילוכים</div>
+                <div class="meta-value">{{item.gearbox}}</div>
+
+                <div class="meta-label">שנת עלייה לכביש</div>
+                <div class="meta-value">{{item.moed_aliya_lakvish}}</div>
+                <div class="meta-label">יד</div>
+                <div class="meta-value">{{item.yad}}</div>
+                <div class="meta-label">כוח סוס</div>
+                <div class="meta-value">{{item.horsepower}}</div>
+                <div class="meta-label">מיקום מכירה </div>
+                <div class="meta-value">{{item.location}}</div>
 
             </div>
 
